welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:2: error: Missing closing brace `}' assumed here
avance();avance();avance;avance();avance();avance
^